<resources>
    <string name="app_name">Wallet</string>
    <string name="action_settings">Settings</string>
    <string name="add_new_income_string">Income (+)</string>
    <string name="add_new_expense_string">Add New Entry</string>
    <string name="title_string">Description</string>
    <string name="enter_title_string">Enter Description</string>
    <string name="income_string">Income</string>
    <string name="expense_string">Expense</string>
    <string name="type_string">Type</string>
    <string name="cat_personal_string">Personal</string>
    <string name="cat_other_string">Other</string>
    <string name="cat_auto_string">Car</string>
    <string name="time_and_date_string">Time and Date</string>
    <string name="no_date_set_string">0000&#8211;00&#8211;00</string>
    <string name="no_time_set_string">00:00:00</string>
    <string name="choose_date_string">Choose Date</string>
    <string name="choose_time_string">Choose Time</string>
    <string name="cancel_string">Cancel</string>
    <string name="reset_string">Reset</string>
    <string name="submit_string">OK</string>
    <string name="date_string">date</string>
    <string name="category_str">Category</string>
    <string name="amount_string">Amount</string>
    <string name="context_menu_edit">Edit</string>
    <string name="context_menu_delete">Delete</string>
    <string name="options_menu_delete_all">Delete All</string>
    <string name="options_menu_export_to_file">Export to file</string>
    <string name="options_menu_import_from_file">Import From File</string>
    <string name="options_menu_add_test_data">Add Test Data</string>
    <string name="enter_description_string">Description</string>
</resources>
