<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

    <!-- Amount -->
    <EditText
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/title"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/amount_string"
        android:inputType="numberDecimal"
        >

        <requestFocus/>
    </EditText>

    <!-- Title -->
    <EditText
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="60sp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/amount"
        android:ems="10"
        android:hint="@string/enter_description_string"
        android:inputType="textShortMessage"

        />


    <!-- Type -->

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/title"
        android:layout_marginTop="25dp"
        android:text="@string/type_string"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <RadioGroup
        android:id="@+id/typeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/type"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/typeIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income_string"/>

        <RadioButton
            android:id="@+id/typeExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/expense_string"/>
    </RadioGroup>

    <!-- Category -->

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/typeGroup"
        android:layout_marginTop="25dp"
        android:text="@string/category_str"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <RadioGroup
        android:id="@+id/categoryGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/category"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:text="@string/amount_string">

        <RadioButton
            android:id="@+id/catPersonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_personal_string"/>

        <RadioButton
            android:id="@+id/catOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/cat_other_string"/>

        <RadioButton
            android:id="@+id/catAuto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_auto_string"/>
    </RadioGroup>

    <!-- Buttons -->

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="25dp"
        android:text="@string/cancel_string"
        />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reset_string"/>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/submit_string"/>


</RelativeLayout>