<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.angelk.wallet.MainActivity"

    >
    <item
        android:id="@+id/action_delete_all"
        android:orderInCategory="100"
        android:title="@string/options_menu_delete_all"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_export"
        android:orderInCategory="100"
        android:title="@string/options_menu_export_to_file"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_import"
        android:orderInCategory="100"
        android:title="@string/options_menu_import_from_file"
        app:showAsAction="never"/>
</menu>
